// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navbar handles add agent modal 1`] = `
.c5 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c5:hover {
  opacity: 0.90;
}

.c5:focus {
  outline: none;
}

.c5:active {
  opacity: 0.80;
}

.c7 {
  background-color: transparent;
  border: 1px solid;
}

.c9 {
  display: inline;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c17 {
  display: grid;
  grid-template-rows: [title] 50px [description] 1fr;
  padding: 20px;
  min-height: 180px;
}

.c19 {
  grid-row: title;
  width: 80%;
  margin: 0 auto;
  text-align: center;
}

.c20 {
  grid-row: description;
  padding: 10px;
  font-size: 0.85rem;
}

.c10 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
}

.c11 {
  position: fixed;
  top: 50%;
  left: 50%;
  max-width: 600px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 100%;
}

.c12 {
  display: grid;
  grid-template-rows: [title] 50px [content] 1fr;
  height: 100%;
  overflow-y: scroll;
}

.c12::-webkit-scrollbar {
  background: transparent;
}

.c13 {
  grid-row: title;
  width: 75%;
  margin: 0 auto;
  text-align: center;
}

.c14 {
  grid-row: content;
  padding: 20px;
}

.c15 {
  display: grid;
  grid-template-columns: [column-one] 50% [column-two] 50%;
  margin: 20px 0px 20px 0px;
}

.c16 {
  grid-column: column-one;
  margin-right: 10px;
}

.c21 {
  grid-column: column-two;
  margin-left: 10px;
}

.c18 {
  width: 100%;
}

.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  opacity: 0.90;
}

.c0 {
  height: 50px;
  padding: 16px;
  display: grid;
  grid-template-columns: [logo] 200px [menu] 1fr [new-agent] 250px [logout] 100px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin-right: 16px;
}

.c2 {
  grid-column: menu;
}

.c1 {
  grid-column: logo;
}

.c8 {
  grid-column: logout;
  float: right;
  width: 100px;
}

.c6 {
  grid-column: new-agent;
  margin-left: 25px;
  margin-right: 25px;
  max-width: 250px;
}

@media (max-width:47.9375em) {
  .c11 {
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    padding: 15px 0px 15px 0px;
    width: auto;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
  }
}

@media (max-width:47.9375em) {
  .c15 {
    grid-template-columns: [column-one] 100%;
    grid-template-rows: [row-one] 1fr [row-two] 1fr;
  }
}

@media (max-width:47.9375em) {
  .c16 {
    grid-row: row-one;
    margin-right: 0px;
    margin: 15px;
  }
}

@media (max-width:47.9375em) {
  .c21 {
    grid-column: column-one;
    grid-row: row-two;
    margin-left: 0px;
    margin: 15px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Apollo
  </div>
  <div
    className="c2"
  >
    <a
      className="c3 c4"
      href="/"
      onClick={[Function]}
    >
      Dashboard
    </a>
  </div>
  <button
    className="c5 c6"
    id="newAgentButton"
    onClick={[Function]}
  >
    Add new agent
  </button>
  <button
    className="c5 c7 c8"
    id="logoutButton"
    onClick={[Function]}
  >
    Logout
  </button>
  <div
    className="c9"
    onClick={[Function]}
  >
    <div
      className="c10 c11"
    >
      <div
        className="c12"
      >
        <h2
          className="c13"
        >
          Add new agent
        </h2>
        <div
          className="c14"
        >
          <div
            className="c15"
          >
            <div
              className="c16"
            >
              <button
                className="c5 c7 c17 c18"
                onClick={[Function]}
              >
                <h3
                  className="c19"
                >
                  Directly on target machine.
                </h3>
                <p
                  className="c20"
                >
                  You have the correct permissions to download the binary directly on the target machine.
                </p>
              </button>
            </div>
            <div
              className="c21"
            >
              <button
                className="c5 c7 c17 c18"
                onClick={[Function]}
              >
                <h3
                  className="c19"
                >
                  Manual upload
                </h3>
                <p
                  className="c20"
                >
                  You download and upload the binary yourself.
                </p>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`navbar handles add agent modal 2`] = `
.c5 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c5:hover {
  opacity: 0.90;
}

.c5:focus {
  outline: none;
}

.c5:active {
  opacity: 0.80;
}

.c7 {
  background-color: transparent;
  border: 1px solid;
}

.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  opacity: 0.90;
}

.c0 {
  height: 50px;
  padding: 16px;
  display: grid;
  grid-template-columns: [logo] 200px [menu] 1fr [new-agent] 250px [logout] 100px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin-right: 16px;
}

.c2 {
  grid-column: menu;
}

.c1 {
  grid-column: logo;
}

.c8 {
  grid-column: logout;
  float: right;
  width: 100px;
}

.c6 {
  grid-column: new-agent;
  margin-left: 25px;
  margin-right: 25px;
  max-width: 250px;
}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Apollo
  </div>
  <div
    className="c2"
  >
    <a
      className="c3 c4"
      href="/"
      onClick={[Function]}
    >
      Dashboard
    </a>
  </div>
  <button
    className="c5 c6"
    id="newAgentButton"
    onClick={[Function]}
  >
    Add new agent
  </button>
  <button
    className="c5 c7 c8"
    id="logoutButton"
    onClick={[Function]}
  >
    Logout
  </button>
</div>
`;

exports[`navbar handles successful logout 1`] = `
.c5 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c5:hover {
  opacity: 0.90;
}

.c5:focus {
  outline: none;
}

.c5:active {
  opacity: 0.80;
}

.c7 {
  background-color: transparent;
  border: 1px solid;
}

.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  opacity: 0.90;
}

.c0 {
  height: 50px;
  padding: 16px;
  display: grid;
  grid-template-columns: [logo] 200px [menu] 1fr [new-agent] 250px [logout] 100px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin-right: 16px;
}

.c2 {
  grid-column: menu;
}

.c1 {
  grid-column: logo;
}

.c8 {
  grid-column: logout;
  float: right;
  width: 100px;
}

.c6 {
  grid-column: new-agent;
  margin-left: 25px;
  margin-right: 25px;
  max-width: 250px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Apollo
  </div>
  <div
    className="c2"
  >
    <a
      className="c3 c4"
      href="/"
      onClick={[Function]}
    >
      Dashboard
    </a>
  </div>
  <button
    className="c5 c6"
    id="newAgentButton"
    onClick={[Function]}
  >
    Add new agent
  </button>
  <button
    className="c5 c7 c8"
    id="logoutButton"
    onClick={[Function]}
  >
    Logout
  </button>
</div>
`;

exports[`navbar render admin link for admins 1`] = `
.c5 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c5:hover {
  opacity: 0.90;
}

.c5:focus {
  outline: none;
}

.c5:active {
  opacity: 0.80;
}

.c7 {
  background-color: transparent;
  border: 1px solid;
}

.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  opacity: 0.90;
}

.c0 {
  height: 50px;
  padding: 16px;
  display: grid;
  grid-template-columns: [logo] 200px [menu] 1fr [new-agent] 250px [logout] 100px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin-right: 16px;
}

.c2 {
  grid-column: menu;
}

.c1 {
  grid-column: logo;
}

.c8 {
  grid-column: logout;
  float: right;
  width: 100px;
}

.c6 {
  grid-column: new-agent;
  margin-left: 25px;
  margin-right: 25px;
  max-width: 250px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Apollo
  </div>
  <div
    className="c2"
  >
    <a
      className="c3 c4"
      href="/"
      onClick={[Function]}
    >
      Dashboard
    </a>
    <a
      className="c3 c4"
      href="/admin"
      onClick={[Function]}
    >
      Admin
    </a>
  </div>
  <button
    className="c5 c6"
    id="newAgentButton"
    onClick={[Function]}
  >
    Add new agent
  </button>
  <button
    className="c5 c7 c8"
    id="logoutButton"
    onClick={[Function]}
  >
    Logout
  </button>
</div>
`;

exports[`navbar renders correctly 1`] = `
.c5 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c5:hover {
  opacity: 0.90;
}

.c5:focus {
  outline: none;
}

.c5:active {
  opacity: 0.80;
}

.c7 {
  background-color: transparent;
  border: 1px solid;
}

.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  opacity: 0.90;
}

.c0 {
  height: 50px;
  padding: 16px;
  display: grid;
  grid-template-columns: [logo] 200px [menu] 1fr [new-agent] 250px [logout] 100px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin-right: 16px;
}

.c2 {
  grid-column: menu;
}

.c1 {
  grid-column: logo;
}

.c8 {
  grid-column: logout;
  float: right;
  width: 100px;
}

.c6 {
  grid-column: new-agent;
  margin-left: 25px;
  margin-right: 25px;
  max-width: 250px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Apollo
  </div>
  <div
    className="c2"
  >
    <a
      className="c3 c4"
      href="/"
      onClick={[Function]}
    >
      Dashboard
    </a>
  </div>
  <button
    className="c5 c6"
    id="newAgentButton"
    onClick={[Function]}
  >
    Add new agent
  </button>
  <button
    className="c5 c7 c8"
    id="logoutButton"
    onClick={[Function]}
  >
    Logout
  </button>
</div>
`;
